# gas-price-rust

./: .gitignore  .taurignore  Cargo.toml  Dockerfile.windows  Dockerfile.windows-full  HOLIDAY_SYSTEM_GUIDE.md  IMPLEMENTATION_PLAN_HOLIDAYS.md  PACKAGING.md  PORT_CONFIGURATION.md  QUICKSTART_HOLIDAY_SYSTEM.md  QUICK_FIX_WEBVIEW2.md  README.md  TROUBLESHOOTING.md  WINDOWS_用户安装说明.md  build.rs  build_desktop.sh  build_macos.sh  build_package.bat  build_package.sh  build_universal.sh  build_windows.sh  create_installer.sh  create_universal_installer.sh  diagnose.html  diagnose_crash.sh  fix_icon.py  generate_icon.py  package-lock.json  package.json  pnpm-lock.yaml  rebuild_windows.sh  run_all_tests.sh  run_tauri_app.sh  run_web.sh  stop_all.sh  tauri.conf.json  test_as_new_user.sh  test_direct_run.sh  test_missing_resources.sh  test_port_conflict.sh  (+4 more)
.github/workflows/: build-release.yml  build.yml  manual-build.yml
.kiro/settings/: mcp.json
.kiro/specs/migrate-to-go-fyne/: .config.kiro  design.md  requirements.md  tasks.md
docs/: CLEANUP_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  WINDOWS_BUILD_SUMMARY.md  WINDOWS_WEBVIEW2_FIX.md
docs/archived/: BUILD_WINDOWS.md  DESKTOP_APP_GUIDE.md  DOCKER_BUILD_GUIDE.md  DOCKER_QUICK_START.md  MACOS_ICON_FIX.md  QUICK_BUILD_WINDOWS.md  README.md  README_TAURI.md  build_windows_docker.sh  build_windows_full.sh  fix_macos_icon.sh  test_crawler.sh
frontend/: README.md  index.html  vite.config.js
frontend/src/: App.jsx  constants.js  location.js  lunarCell.jsx  main.jsx  utils.js
frontend/src/api/: base.js  index.js
frontend/src/components/: LocalPrices.jsx  PriceAlert.jsx  Skeleton.jsx
frontend/src/pages/: Calendar.jsx  Chart.jsx  ChartPage.jsx  Compare.jsx  Home.jsx  HomePage.jsx  Map.jsx  MapPage.jsx  Settings.jsx  Stations.jsx  Trend.jsx
frontend/src/services/: api.js
frontend/src/styles/: app.css  map.css
icons/: README.md  design-philosophy.md  generate-icon.py  icon.icns
src/: README.md  crawler.rs  database.rs  error.rs  handlers.rs  lib.rs  main.rs  main_backup.rs  models.rs  tauri_main.rs
src/api/: handlers.rs  routes.rs
src/domain/: mod.rs  models.rs  oil_price.rs
src/infrastructure/: crawler.rs  db.rs  holiday_sync.rs  mod.rs  workday_calculator.rs
static/: app.js  chart-new.js  chart.html  chart.js  index.html  map-new.js  map.html  map.js  style.css  test.html  test_tauri.html
static/assets/: index-B2YIEOBO.css  index-By17HfGs.js  index-Cf1qCvk-.js  index-ChzASfW0.js  index-CvQYSLXj.css  index-DG_vHQWl.css  index-Dm8Udeyr.css  index-S9QRcZf8.js  index-iMWQM8aR.js  index-jCVsr2vL.css
static/js/: README.md  api.js  constants.js  location.js  locationCache.js  main.js  tauriFetch.js  utils.js
(+7 files in other folders)
