[package]
name = "gas-price"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.0"
actix-files = "0.6.8"
chrono = { version = "0.4.42", default-features = false, features = ["std", "clock"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "http2", "charset", "json"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
dirs = "5.0"
regex = "1.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tauri = { version = "1.8", features = [ "window-unminimize", "window-minimize", "window-maximize", "window-close", "window-hide", "window-show", "window-unmaximize", "window-start-dragging", "shell-open", "system-tray"] }
urlencoding = "2.1.3"
dotenvy = "0.15.7"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "gas_price_lib"
path = "src/lib.rs"

[[bin]]
name = "gas-price"
path = "src/tauri_main.rs"

[[bin]]
name = "gas-price-web"
path = "src/main.rs"
